<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PlanMyWorkout</string>
    
    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    
    <!-- Register Screen -->
    <string name="register">Register</string>
    <string name="register_subtitle">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Forgot Password Screen -->
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_subtitle">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
</resources>
